# greenhouse

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  Doxyfile  README.txt  deploy.sh  docker-compose.yml  firmware.Dockerfile  stress.sh
SD/: CONFIG.INI  README.txt
docker/: json-exporter.yml  prometheus.yml  reverse.conf
documents/: Adafruit TSL2561.fzpz  DHT22 Humidity and Temperature Sensor.fzpz  Layout.fzz  README.txt
examples/: BUILD.BAT
firmware/: .gitignore  BUILD.BAT  CMakeLists.txt  NoCString.cpp  NoCString.h  README.txt  firmware.ino  ini.cpp  ini.h  parsers.h  speaker.ino
firmware/blinky/: blinky.ino
firmware/dht22/: dht22.ino
firmware/documents/: Layout.fzz
firmware/examples/blinky/: blinky.ino
firmware/examples/client/: NoCString.cpp  client.ino  ini.h
firmware/examples/speaker/: speaker.ino
firmware/examples/void/: void.ino
firmware/src/: main.cpp
firmware/tsl2561/: tsl2561.ino
manual/: features.dox  housing.dox  index.dox
manual/resources/: housing_1.m3d  housing_2.m3d
src/: NoCString.h  firmware.ino  parsers.cpp
